In gcc/: 2011-01-26  Nicola Pero  <nicola.pero@meta-innovation.com>

PR c/43082
	* c-typeck.c (c_objc_common_truthvalue_conversion): If we are
	passed a VOID_TYPE expression, immediately emit an error and
	return error_mark_node.

In gcc/testsuite/:
2011-01-26  Nicola Pero  <nicola.pero@meta-innovation.com>
	    Andrew Pinski  <pinskia@gmail.com>

	PR c/43082
	* gcc.dg/pr43082.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169319 138bc75d-0d04-0410-961f-82ee72b054a4